@@ -362,3 +362,21 @@
 .es_badges > input:checked + span { 
 	text-decoration: underline !important; 
 }
+
+.es_wl_sort { 
+	cursor: pointer;
+	padding-right: 5px;
+}
+
+.es_wl_sort > input { 
+	display: none; 
+}
+
+.es_wl_sort > input:checked + span > a  {
+	cursor: text;
+	text-decoration: none; 
+}
+
+.es_wl_sort > input:checked + span > a:hover  {
+	color: #B0AEAC;
+}
