@@ -93,6 +93,8 @@ var localized_strings,
             games_with_drops: "__dropsgames__ games with drops remaining",
 			games_with_booster: "__boostergames__ games eligible for booster packs",
             badges_all: "All Badges",
+			games_all: "All Games",
+			games_discount: "Games With Discounts",
             badges_drops: "Badges With Card Drops Remaining",
             sales_total: "Sales total",
             purchase_total: "Purchase total",
